[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/ui_control/conectionSetupDialog.gd" type="Script" id=1]

[node name="conectionSetupDialog" type="WindowDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = -216.0
margin_bottom = -198.0
window_title = "ESP32 Conection Setup"
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 5
size_flags_vertical = 5
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 296.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 82.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Direcc√≠on IP:"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 86.0
margin_right = 152.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="LineEditIp" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 156.0
margin_right = 296.0
margin_bottom = 24.0
rect_min_size = Vector2( 140, 0 )
text = "192.168.208.200"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 296.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 107.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Puerto:"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 111.0
margin_right = 218.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 222.0
margin_right = 296.0
margin_bottom = 24.0
max_value = 1e+08
value = 12000.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 296.0
margin_bottom = 74.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_right = 96.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Estado"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer3"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 100.0
margin_right = 196.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="LabelStatus" type="Label" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 200.0
margin_right = 296.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Desconectado"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 296.0
margin_bottom = 98.0

[node name="Button_volver" type="Button" parent="VBoxContainer/HBoxContainer4"]
margin_right = 52.0
margin_bottom = 20.0
text = "Volver"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer4"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 56.0
margin_right = 103.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Button_conectar" type="Button" parent="VBoxContainer/HBoxContainer4"]
margin_left = 107.0
margin_right = 175.0
margin_bottom = 20.0
text = "Conectar"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer4"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 179.0
margin_right = 227.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Button_ping" type="Button" parent="VBoxContainer/HBoxContainer4"]
margin_left = 231.0
margin_right = 296.0
margin_bottom = 20.0
text = "Ping Bot"

[node name="TimeoutHandshakeTry" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer4/Button_volver" to="." method="_on_Button_volver_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer4/Button_conectar" to="." method="_on_Button_conectar_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer4/Button_ping" to="." method="_on_Button_ping_pressed"]
[connection signal="timeout" from="TimeoutHandshakeTry" to="." method="_on_TimeoutHandshakeTry_timeout"]
